[gd_scene load_steps=8 format=2]

[ext_resource path="res://shared/audio/fx/punch_01.wav" type="AudioStream" id=1]
[ext_resource path="res://UI/Damage/DamageLabelNormal.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Damage/Damage3D.gd" type="Script" id=3]
[ext_resource path="res://UI/Damage/DamageLabelMiss.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Damage/DamageLabelCrit.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Damage/DamageLabelHeal.tscn" type="PackedScene" id=6]
[ext_resource path="res://shared/audio/fx/juancamiloorjuela__heal_1.wav" type="AudioStream" id=7]

[node name="Damage3D" type="RigidBody"]
input_ray_pickable = false
collision_layer = 0
collision_mask = 0
gravity_scale = 3.0
linear_velocity = Vector3( -5, 15, 0 )
script = ExtResource( 3 )

[node name="HealAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "Fx"

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -20.0
bus = "Fx"

[node name="DamageLabelNormal" parent="." instance=ExtResource( 2 )]

[node name="DamageLabelMiss" parent="." instance=ExtResource( 4 )]
visible = false

[node name="DamageLabelHeal" parent="." instance=ExtResource( 6 )]
visible = false

[node name="DamageLabelCrit" parent="." instance=ExtResource( 5 )]
visible = false
